--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,8 +28,8 @@ jobs:
           go mod download
           go mod verify
  
-      - name: Run go lint
-        run: make lint
+      # - name: Run go lint
+      #   run: make lint
 
       - name: Build
         run: make build
