--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,50 +2,73 @@ name: build
 on: [push, pull_request]
 jobs:
 
-  build:
-    name: Build
-    runs-on: ubuntu-latest
+  # build:
+  #   name: Build
+  #   runs-on: ubuntu-latest
     
-    steps:
+  #   steps:
 
-      - name: Set up Go 1.16.3
-        uses: actions/setup-go@v1
-        with:
-          go-version: 1.16.5
-        id: go
+  #     - name: Set up Go 1.16.3
+  #       uses: actions/setup-go@v1
+  #       with:
+  #         go-version: 1.16.5
+  #       id: go
 
-      - name: Set up path
-        run: |
-          echo "GOPATH=$(go env GOPATH)" >> $GITHUB_ENV
-          echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
-        shell: bash
+  #     - name: Set up path
+  #       run: |
+  #         echo "GOPATH=$(go env GOPATH)" >> $GITHUB_ENV
+  #         echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
+  #       shell: bash
 
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v1
+  #     - name: Check out code into the Go module directory
+  #       uses: actions/checkout@v1
 
-      - name: build go binary
-        uses: actions/setup-go@v1
-        with:
-          go-version: 1.16.5
-        run: go build .
+  #     - name: build go binary
+  #       uses: actions/setup-go@v1
+  #       with:
+  #         go-version: 1.16.5
  
-      # - name: Run go lint
-      #   run: make lint
+  #     # - name: Run go lint
+  #     #   run: make lint
 
-      # - name: Build
-      #   run: make build
+  #     - name: Build
+  #       run: make build
       
-      - name: Docker build
-        run: make build-docker
+  #     - name: Docker build
+  #       run: make build-docker
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v1
+  #     - name: Login to Docker Hub
+  #       uses: docker/login-action@v1
+  #       with:
+  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
+  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+  #     - name: Docker Push
+  #       run: make push-docker
+
+  goreleaser:
+    runs-on: ubuntu-latest
+    steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Docker Push
-        run: make push-docker
+          fetch-depth: 0
+      -
+        name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.15
+      -
+        name: Run GoReleaser
+        uses: goreleaser/goreleaser-action@v2
+        with:
+          # either 'goreleaser' (default) or 'goreleaser-pro'
+          distribution: goreleaser
+          version: latest
+          args: release --rm-dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
 
 
