--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,12 @@ version: "3.2"
     
 services:
   go:
-    image: becram/k8s-api-client:2.1 
+    # image: becram/k8s-api-client:2.3
+    env_file: 
+      - .env
     build: 
       context: .
+      dockerfile: Dockerfile.dev
     restart: always
     ports:
     - "8080:8080"
