--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,5 +1,10 @@
 FROM golang:1.16
 
+RUN apk update && apk add curl git
+
+RUN curl -LO https://storage.googleapis.com/kubernetes-release/release/v1.21.1/bin/linux/amd64/kubectl
+RUN chmod u+x kubectl && mv kubectl /bin/kubectl
+
 WORKDIR /tmp/app
 
 ADD . /tmp/app/
